fixing header to not squish.

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,7 +20,7 @@ header{
   }
   .main-nav{
     display:flex;
-    margin-left: 650px;
+    margin-left: 500px;
       @media @mobile{
         justify-content: space-between;
         text-align:center;
